--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ test:
     - docker-compose up -d
     - docker-compose run dockerapp python test.py
 
-peployment:
+deployment:
   hub:
     branch: [circle_ci_publish, master]
     commands:
